--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                     <input id="rua" type="text" name="rua">
                 </div>
             </div>
-            <input id="botao" type="submit" value="Salvar" src="login.html">
+            <input id="botao" type="submit" value="Salvar">
+            <p>Já tem conta?</p>
+            <button type="button" onclick="window.location.href='login.html'">Entrar</button>
         </form>
     </div>
     <div id="welcome">
